--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,6 +5,7 @@ services:
   prometheus_shtc3:
     build:
       context: ./shtc3_prometheus/
+    container_name: shtc3_prometheus
     restart: always
     devices:  
       - "/dev/i2c-1:/dev/i2c-1" 
